# myapp

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTIONAL_DECLARATION.md  CONTEXT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FOUNDERS.md  HANDOFF.md  HANDOFF_V8.md  POST-MORTEM.md  README.md  SECURITY.md  Untitled-1.txt  VERIFY_WARDEN_PHASE_1.md  build.sh  debug_json.ps1  docker-compose.yml  extract.ps1  extract_line.ps1  extract_messages.ps1  extract_text.ps1  ingest.ps1  init_structure.ps1  list_scripts_v2.ps1  package.json  requirements.txt  requirements_swarm.txt  sovereign-discord-bot.js  sovereign-os.js  sovereign-stress-test.js  sovereign_singularity.py  stall-sim.js  start.js  vault_init.py  vercel.json  verify_proxy.py
.agent/: rules.md  skills.md  workflows.md
.claude/: launch.json  settings.json
.forge/: audit.jsonl  cognitive-profile.json  homeostasis_metrics.json  state.json
.github/: PULL_REQUEST_TEMPLATE.md
.sovereign_context/: HANDOVER_INSTRUCTIONS.md  PROJECT_STATE.md  SYSTEM_DIRECTIVES.md
Untitled Folder/: default-clone.jupyterlab-workspace  default.jupyterlab-workspace
aegis-cl-psi/: default.jupyterlab-workspace
aegis-mushaf/: Cargo.toml
aegis-mushaf/scripts/: maqam_visualizer.js
aegis-mushaf/src/: epistemic_firewall.rs  lib.rs  semantic_algebra.rs  tajweed_dfa.rs  tanzil_ledger.rs  telemetry_emitter.rs
aegisomega-webgpu/: index.html  package-lock.json  (+4 more)
eccf/: Cargo.toml
eccf/src/: calligraphic_renderer.rs  keccak_hash.rs  lattice_stroke.rs  lib.rs  ntt_transform.rs  parametric_scaling.rs
(+1928 files in other folders)
