[package]
name = "aegis_mushaf"
version = "0.1.0"
edition = "2021"
authors = ["Tarik Skalić <tarikskalic33@gmail.com>"]
description = "AEGIS Digital Mushaf — T0 integrity ledger for Quranic text with epistemic firewall, Tajweed DFA, and semantic algebra"
license = "AGPL-3.0-or-later"

# EPISTEMIC TIER: T2 (engineering hypothesis)
# TANZIL_GENESIS_SEAL: placeholder — T2 until verified against actual Tanzil XML corpus SHA-256
# Constitutional root: AdaptivePower(T) ≤ ReplayVerifiability(T)
# Domain 0 (text) and Domain 1 (tafsir) are separated by the epistemic firewall.
# No HashMap — BTreeMap throughout for deterministic iteration.
# No tokio — std::net::UdpSocket for telemetry emission.

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
byteorder = "1.5"

[dev-dependencies]
# No additional dev deps — all test utilities are in-crate
